--- a/styles/main.css
+++ b/styles/main.css
@@ -8,5 +8,34 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Oswald', sans-serif;
+    font-family: "Roboto", sans-serif;
+}
+
+.show-borders {
+	outline: 1px solid Black;
+    background-color: aquamarine;
+}
+
+body {
+    background-color: cornflowerblue;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.screen-size {
+    width: calc(100vw - 40px); /* 20px from each margin */
+    height: calc(100vh - 40px); /* 20px from top and bottom */
+    background-color: white;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    font-weight: bold;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
